# Crimson

./: CMakeLists.txt  README.md
include/CrimsonEngine/: Surface.cpp
include/CrimsonEngine/Core/: CoreUtils.h
include/CrimsonEngine/Math/: Size.h
include/CrimsonEngine/Platform/: Surface.h
src/Crimson.Graphics/RHI/: GraphicsDevice.cs
src/Crimson.Graphics/RHI/SDL/: SdlDevice.cs
src/Platform/: Surface.cpp
src/Platform/SDL3/: SDL3Surface.cpp  SDL3Surface.h
